Added loguru library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,8 +56,13 @@ set(IMGUI_SOURCES
 	3rdparty/imgui/imgui_widgets.cpp
 )
 
+#  LOGURU cpp files
+set(LOGURU_SOURCES
+	3rdparty/loguru/loguru.cpp
+)
+
 # Add an executable with the above sources
-add_executable(psxemu ${PSXEMU_SOURCES} ${IMGUI_SOURCES})
+add_executable(psxemu ${PSXEMU_SOURCES} ${IMGUI_SOURCES} ${LOGURU_SOURCES})
 
 # Set the directories that should be included in the build command for this target
 # when running g++ these will be included as -I/directory/path/
@@ -66,6 +71,7 @@ target_include_directories(psxemu
  		${PROJECT_SOURCE_DIR}/3rdparty/bitfield
 		${PROJECT_SOURCE_DIR}/3rdparty/imgui
 		${PROJECT_SOURCE_DIR}/3rdparty/litelib
+		${PROJECT_SOURCE_DIR}/3rdparty/loguru
 		${PROJECT_SOURCE_DIR}/src
 		${PROJECT_SOURCE_DIR}/src/cpu
 		${PROJECT_SOURCE_DIR}/src/core
