--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,12 @@ bld/
 *.cue
 *.bin
 psxemu
+
+# Ignore Libraries in 3rdparty folder
+3rdparty/imgui_club/**
+3rdparty/fpm/**
+3rdparty/imgui-docking/**
+3rdparty/loguru/**
+
+# Except HOW_TO_INSTALL files in 3rdparty folder
+!3rdparty/**/HOW_TO_INSTALL.md
