Removed update 3rdparties directory structure

--- a/.gitignore
+++ b/.gitignore
@@ -48,8 +48,9 @@ psxemu
 # Ignore Libraries in 3rdparty folder
 3rdparty/imgui_club/**
 3rdparty/fpm/**
-3rdparty/imgui-docking/**
+3rdparty/imgui/**
 3rdparty/loguru/**
 
 # Except HOW_TO_INSTALL files in 3rdparty folder
 !3rdparty/**/HOW_TO_INSTALL.md
+/3rdparty/imgui_club/HOW_TO_INSTALL.md
