--- a/.gitignore
+++ b/.gitignore
@@ -46,11 +46,16 @@ bld/
 psxemu
 
 # Ignore Libraries in 3rdparty folder
-3rdparty/imgui_club/**
-3rdparty/fpm/**
-3rdparty/imgui/**
-3rdparty/loguru/**
+3rdparty/imgui_club/*
+3rdparty/fpm/*
+3rdparty/imgui/*
+3rdparty/loguru/*
+
+# Reenable Directory
+!3rdparty/imgui_club/
+!3rdparty/fpm/
+!3rdparty/imgui/
+!3rdparty/loguru/
 
 # Except HOW_TO_INSTALL files in 3rdparty folder
 !3rdparty/**/HOW_TO_INSTALL.md
-/3rdparty/imgui_club/HOW_TO_INSTALL.md
